--- a/hw6.html
+++ b/hw6.html
@@ -38,6 +38,7 @@
 
 	// Initial array of movies
 	var movies = ['Kevin Love','Draymond Green', 'Kyrie Irving','Klay Thompson','JR Smith','Steph Curry', 'Lebron James','NBA Finals'];
+	//changed to finals theme
 	//, 'Trunks','Vegeta','Super Saiyin Gohan'
 	// ========================================================
 	// displayMovieInfo function now re-renders the HTML to display the appropriate content. 
